--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <option value="365">1 year</option>
                     </select>
                 </p>
-                <p>
+                <p style="padding: 10px; text-align: center">
                     <input type="submit" id="submit-book" value="Add book to reading plan">
                 </p>
             </form>
