--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/css/images/favicon.ico" />
+    <link rel="icon" href="./css/images/favicon.ico">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/list.css">
     <link rel="stylesheet" href="css/add.css">
@@ -11,7 +11,7 @@
     <script language="javascript" src="js/lists.js" defer="true"></script>
     <script language="javascript" src="js/nav.js" defer="true"></script>
     <script language="javascript" src="js/app.js" defer="true"></script>
-    <title>Reading list</title>
+    <title>Reading List</title>
 </head>
 <body>
     <div class="section" id="lists">
